fix visibility for megamenu

--- a/markup/static/scss/common.scss
+++ b/markup/static/scss/common.scss
@@ -224,7 +224,7 @@ img.rotate {
 .hidden {
 	display: none !important;
 }
-.visible {
+.visible-map {
     display: block!important;
 }
 .page__wrapper {
